Link to homepage corrected

--- a/form.html
+++ b/form.html
@@ -24,6 +24,6 @@
       <input type="submit" value="hghg" />
     </form>
     <br />
-    <a href="test.html"><-Back to Main</a>
+    <a href="index.html"><-Back to Main</a>
   </body>
 </html>
