Enhanced Web page. HTML and CSS Intro lessons applied.

--- a/index.html
+++ b/index.html
@@ -2,67 +2,62 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Test Html File 😀</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Styles/indexStyle.css" />
+    <link href=’http://fonts.googleapis.com/css?family=Merriweather&#8217;
+    rel=’stylesheet’ type=’text/css’>
+    <title>My Website</title>
   </head>
-
-  <!----------------Body Start---------------->
   <body>
-    <table>
-      <tr>
-        <td>
-          <img
-            src="https://cdn.mos.cms.futurecdn.net/i26qpaxZhVC28XRTJWafQS-1024-80.jpeg.webp"
-            alt="unable to display image"
-            width="200"
-            height="200"
-          />
-        </td>
-        <td>
-          <h1>Hey. I'm Ramji.</h1>
-        </td>
-      </tr>
-    </table>
-    <strong><a href="form.html">Link</a></strong>
-    <p><i>Paragraph tag.</i></p>
-    <p>I'm not creative..</p>
-    <p>This is going to be the most boring site on the internet...</p>
-    <ol type="i">
-      <li>Point 1</li>
-      <li>
-        Point 2
-        <ul>
-          <li>Sub Point 1</li>
-          <li>Sub Point 2</li>
-        </ul>
-      </li>
-      <li>Point 3</li>
-    </ol>
-    <hr size="4" noshade />
-
-    <!----------------Table start---------------->
-    <table border="1">
-      <thead>
-        <tr>
-          <th>Place</th>
-          <th>Time</th>
-          <th>Experience</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Kareri</td>
-          <td>Dec 2018</td>
-          <td>😀😀😀</td>
-        </tr>
-        <tr>
-          <td>Hampta</td>
-          <td>Auig 2019</td>
-          <td>😀😀😀😀😀</td>
-        </tr>
-      </tbody>
-      <tfoot></tfoot>
-    </table>
-    <br />
-    <!----------------Table End---------------->
+    <div class="top">
+      <img src="images/cloud.png" alt="cloud" class="top-cloud" />
+      <h1>I'm Deepak</h1>
+      <h2>A Web developer</h2>
+      <img src="images/cloud.png" alt="cloud" class="bottom-cloud" />
+    </div>
+    <div class="middle">
+      <div class="profile">
+        <img class="MyPic" src="images/PP.png" alt="Me" />
+        <h1 style="margin-bottom: 0">Hello!</h1>
+        <p class="MyIntroContent">
+          I'm an aspiring full stack developer. Currently upskilling myself in
+          web technologies. In future, I see myself as being completely capable
+          of managing a complex web application end to end. 🤟
+        </p>
+      </div>
+      <hr />
+      <h1>Competencies</h1>
+      <div class="skills">
+        <img class="skillsPic" src="images/skills.png" alt="skills" />
+        <p class="skillsHead">Techstack</p>
+        <p class="skillsList" style="margin-bottom: 35px">
+          HTML, CSS, Javascript, ReactJS, NodeJS, SQL, MongoDB, jQuery, RESTApis
+        </p>
+      </div>
+      <div class="skills">
+        <img
+          class="otherSkillsPic"
+          src="images/otherSkills.png"
+          alt="skills"
+          style="float: right"
+        />
+        <p class="skillsHead">Other Competencies</p>
+        <p class="skillsList" style="margin-bottom: 35px">
+          DSA, Computer-Aided Design, OOAD, C, C++, 2D/3D Geometry, Vector
+          Algebra, TFS, GIT, Scrum Methodologies
+        </p>
+      </div>
+      <hr />
+    </div>
+    <div class="bottom">
+      <h1>Get In Touch</h1>
+      <a class="btn" href="mailto:ramji.hariharan@gmail.com">CONTACT ME</a>
+      <br />
+      <br />
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    </div>
   </body>
 </html>
