--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="skills">
         <img
           class="otherSkillsPic"
-          src="images/otherSkills.png"
+          src="images/OtherSkills.png"
           alt="skills"
           style="float: right"
         />
