--- a/Drum Kit Starting Files/index.html
+++ b/Drum Kit Starting Files/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <footer>Made with ❤️ in London.</footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
